--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-lang-info",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "module to retrieve current user's language",
   "main": "index.js",
   "scripts": {
@@ -22,5 +22,8 @@
   "homepage": "https://github.com/Elzair/node-lang-info",
   "devDependencies": {
     "mocha": "^1.20.1"
+  },
+  "dependencies": {
+    "string": "~1.9.0"
   }
 }
