--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "node-lang-info",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "module to retrieve current user's language",
   "main": "index.js",
   "scripts": {
     "pretest": "npm install",
-    "test": "./node_modules/mocha/bin/mocha test/unit/*.js"
+    "test": "node_modules/.bin/mocha test/unit/*.js"
   },
   "repository": {
     "type": "git",
